service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-sample-app
  labels:
    app: go-sample-app
    service: go-sample-app
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: go-sample-app
