virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-sample
spec:
  hosts:
  - "*"
  gateways:
  - go-sample-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: go-sample-app
        port:
          number: 8888
